--- a/index.html
+++ b/index.html
@@ -6,23 +6,6 @@
     <title>Unity Web Player | Asteroids</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
-
-    <style>
-
-      body {
-        background-color: #202021;
-      }
-
-      h1 {
-        color: whitesmoke;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        display: flex;
-
-      }
-
-    </style>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
@@ -69,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Build.loader.js";
+      var loaderUrl = buildUrl + "/MG-afk.asteroids.github.io.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Build.data",
-        frameworkUrl: buildUrl + "/Build.framework.js",
-        codeUrl: buildUrl + "/Build.wasm",
+        dataUrl: buildUrl + "/MG-afk.asteroids.github.io.data",
+        frameworkUrl: buildUrl + "/MG-afk.asteroids.github.io.framework.js",
+        codeUrl: buildUrl + "/MG-afk.asteroids.github.io.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Asteroids",
